--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -4015,7 +4015,7 @@ button i {
 @media only screen  and (min-width: 1200px) and (max-width: 1600px) {
 
 	.banner-style-one h2{
-	font-size: 54;
+	font-size: 48px;
 	line-height: 50px;
 	}
 
@@ -4367,14 +4367,14 @@ ul.feature-fun-fact li:first-child {
 	display: inline-block;
 	position: absolute;
 	right: 40px;
-	font-size: 50px;
+	font-size: 80px;
 	transform: rotate(-45deg);
 	top: 48px;
 }
 
 .services-style-one h4 {
 	margin: 0;
-	margin-top: 30px;
+	/* margin-top: 30px; */
 }
 .services-style-one ul li {
 	list-style: disc;
