--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -7342,7 +7342,7 @@ ul.list-double {
 	padding: 48px 32px 48px 32px;
 	gap: 32px;
 	border-radius: 16px;
-	opacity: 0px;
+	/* opacity: 0px; */
 	background-color: rgba(255, 255, 255, 1);
 	box-shadow: 16px 16px 42px 0px rgba(0, 0, 0, 0.25);
 
@@ -9307,9 +9307,9 @@ footer .footer-bottom p {
 	}
 
 	/* Experience */
-	.experience-area .faq-style-one::after {
+	/* .experience-area .faq-style-one::after {
 		display: none;
-	}
+	} */
 
 	.experience-area .faq-style-one {
 		padding: 0;
@@ -9708,9 +9708,9 @@ footer .footer-bottom p {
 	}
 
 	/* Experience */
-	.experience-area .faq-style-one::after {
+	/* .experience-area .faq-style-one::after {
 		display: none;
-	}
+	} */
 
 	.experience-area .faq-style-one {
 		padding: 0;
